# rp2040-dodge-and-shoot

./: .gitignore  Cargo.toml  README.md  bin2uf2.py  build.rs  deploy.sh  memory.x
.cargo/: config.toml
src/: main.rs
